// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component] FFCardsList renders correctly 1`] = `
<Image
  source="test-file-stub"
  style={
    Array [
      Object {
        "height": 20,
        "width": 20,
      },
      Object {},
    ]
  }
/>
`;

exports[`[Component] FFCardsList renders correctly in circle 1`] = `
<Image
  source="test-file-stub"
  style={
    Array [
      Object {
        "height": 20,
        "width": 20,
      },
      Object {
        "borderColor": "#333",
        "borderRadius": 10,
        "borderWidth": 100,
      },
    ]
  }
/>
`;

exports[`[Component] FFCardsList renders correctly in circle with custom size 1`] = `
<Image
  source="test-file-stub"
  style={
    Array [
      Object {
        "height": 40,
        "width": 40,
      },
      Object {
        "borderColor": "#333",
        "borderRadius": 20,
        "borderWidth": 100,
      },
    ]
  }
/>
`;

exports[`[Component] FFCardsList renders correctly with custom size 1`] = `
<Image
  source="test-file-stub"
  style={
    Array [
      Object {
        "height": 40,
        "width": 40,
      },
      Object {},
    ]
  }
/>
`;
